# aoscc-manager

./: .gitignore  README.md  pyproject.toml
aoscc/: __init__.py  config.py  schema.sql  secret.example.py
aoscc/admin/: __init__.py  db.py  grant.py  notify.py  payment.py  user.py
aoscc/admin/templates/: admin.html  db.html  grant.html  notify.html  payment.html  user.html
aoscc/static/: common.css
aoscc/templates/: base.html  contact.html
aoscc/user/: __init__.py  billing.py  info.py  login.py  merch.py  register.py
aoscc/user/service/: __init__.py  accommo.py  badge.py  checkin.py  pgp.py  volunteer.py
aoscc/user/service/templates/: accommo.html  badge.html  checkin.html  pgp.html  service.html  volunteer.html
aoscc/user/templates/: billing.html  index.html  info.html  login.html  merch.html  register.html
aoscc/util/: __init__.py  cache.py  db.py  encrypt.py  form.py  grant.py  mail.py  tg.py  tmpl.py  verify.py
